--- a/functions/package.json
+++ b/functions/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "actions-on-google": "^2.5.0",
+    "cheerio": "^1.0.0-rc.2",
     "dialogflow-fulfillment": "^0.6.1",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.1.0",
     "gtfs-realtime-bindings": "0.0.4",
+    "lodash": "^4.17.11",
     "node-fetch": "^2.3.0",
     "request": "^2.88.0"
   },
